--- a/project phase 1/style.css
+++ b/project phase 1/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 #container {
-    background-color: silver;
+    background-color: rgb(125, 217, 240);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(10, 0, 0, 0.1);
@@ -54,7 +54,6 @@ p {
     padding: 10px;
     background-color: #4CAF50;
     color: white;
-    border: none;
     border-radius: 20px;
     cursor: pointer;
 }
@@ -87,7 +86,6 @@ p {
     padding: 10px;
     background-color: #007BFF;
     color: white;
-    border: none;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -130,7 +128,7 @@ ul {
 ul li {
     padding: 8px 12px;
     margin: 5px 0;
-    background-color: #e1f5fe;
+    background-color: #d1ecf8;
     border-radius: 4px;
 }
 
